@@ -2,7 +2,7 @@ sg3-utils (1.29-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Thu, 15 Oct 2009 13:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Fri, 12 Feb 2010 00:40:00 +0100
 
 sg3-utils (1.28-0.1) unstable; urgency=low
 
